Add BenchTAOAssocRange for Neo4j and modify scripts